@startuml SpaceInvaders
class Screen{
    - SCREEN_WIDTH:int
    - SCREEN_HEIGHT:int
    - screen: Display
    - score:int
    - playing:bool
    - missileCollisionable: Group
    - allSprites: Group

    + displayTextScore()
    + displayLife()
    + displayStartScreen()
    + displayGameover():bool
    + instanceSprites()
    + playSpaceInvaders()
    + createAliens(jOffset:int):Group
    - pausar()

}

class Group{
    + update()
    + add()
}
class Sprite{
    - rect:Rect
    - image:Surface
    + update()
    + kill()
}

class Block{
    - resistance:int
    + shape : int []
    + gotShoot()
}
class Lasser{
    - size:int
    - vel:int
    - {static} lasser:Laser
    - shooted:bool
    + {static} getInstance():Laser
    + setPosition(x:int, y:int):
    + update()
    + removeFromScreen()
}

class Missile{
    - sizeX :int
    - sizeY :int
    - vel :int
    - {static} missile : Missile
    - shooted: bool
    + {static} getInstance(): Missile
    + setPosition(x:int, y:int)
    + removeFromScreen()
    + wasShooted():bool
}
class Ufo{
    - width:int
    - height:int
    - score:int
    - velocity:int
    - appeared:bool
    - {static} Ufo: Ufo
    + {static} getInstance():Ufo
    + setPosition(x:int)
    + gotShoot()
    + hasAppeared():bool
}
class Defender{
    - width:int
    - height:int
    - velocity:int
    - life:int
    - X_MAX:int
    + shoot()
    + gotShoot()
    + moveX(dx:int):
}
class Invader{
    - width:int
    - height:int
    - score:int
    - velocity:int
    - currentImg: Surface
    - images: Surface[]
    - direction:int
    - screen : Display
    - X_MAX : int
    + shoot()
}
class Squid
class Octopus
class Text{
    - font:Font
    - textVal:String
    - text:Surface
    - rect: Rect
    + Text(font:Font, text:String, x:int, y:int):
    + checkHover(pos:Rect)
    + display(screen:Display)
}
class Obstacle{
    - blockSize : int
    - obstacleAmount : int
    - yStart : int
    - shape : int[]
    - blocks : Group
    - create_obstacle(xStart, yStart , offsetX):
    + create_multiple_obstacles(*offset, xStart, yStart):
}
class Defender

Sprite <|-- Block
Sprite  <|-- Lasser
Sprite <|-- Missile
Sprite <|-- Ufo
Sprite <|-- Invader
Invader <|-- Squid
Invader <|-- Octopus
Sprite <|-- Defender
Block "6" --* Obstacle
Screen --> "*" Group
Screen --> "*" Text
Group "1..*" *--Sprite:Sprites


@enduml